# contiguous-associative

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  example.cpp
src/include/contiguous/: contiguous_internal.h  contiguous_multi_base.h  contiguous_single_base.h  multiset.h  set.h
test/: CMakeLists.txt  defs.h  fail_defs.h
test/containers/: map_allocator_requirement_test_templates.h  set_allocator_requirement_test_templates.h
test/map/: allocator_mismatch.fail.cpp  compare.pass.cpp  incomplete_type.pass.cpp  types.pass.cpp
test/map/map.access/: at.pass.cpp  empty.pass.cpp  index_key.pass.cpp  index_rv_key.pass.cpp  index_tuple.pass.cpp  iterator.pass.cpp  max_size.pass.cpp  size.pass.cpp
test/map/map.cons/: alloc.pass.cpp  assign_initializer_list.pass.cpp  compare.pass.cpp  compare_alloc.pass.cpp  compare_copy_constructible.fail.cpp  copy.pass.cpp  copy_alloc.pass.cpp  copy_assign.pass.cpp  default.pass.cpp  default_noexcept.pass.cpp  default_recursive.pass.cpp  dtor_noexcept.pass.cpp  initializer_list.pass.cpp  initializer_list_compare.pass.cpp  initializer_list_compare_alloc.pass.cpp  iter_iter.pass.cpp  iter_iter_comp.pass.cpp  iter_iter_comp_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign.pass.cpp  move_assign_noexcept.pass.cpp  move_noexcept.pass.cpp
test/map/map.modifiers/: clear.pass.cpp  emplace.pass.cpp  emplace_hint.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.pass.cpp  erase_key.pass.cpp  insert_and_emplace_allocator_requirements.pass.cpp  insert_cv.pass.cpp  insert_initializer_list.pass.cpp  insert_iter_cv.pass.cpp  insert_iter_iter.pass.cpp  insert_iter_rv.pass.cpp  insert_or_assign.pass.cpp  insert_rv.pass.cpp  try.emplace.pass.cpp
test/map/map.ops/: count.pass.cpp  count0.pass.cpp  count1.fail.cpp  count2.fail.cpp  count3.fail.cpp  equal_range.pass.cpp  equal_range0.pass.cpp  equal_range1.fail.cpp  equal_range2.fail.cpp  equal_range3.fail.cpp  find.pass.cpp  find0.pass.cpp  find1.fail.cpp  find2.fail.cpp  find3.fail.cpp  lower_bound.pass.cpp  lower_bound0.pass.cpp  lower_bound1.fail.cpp  lower_bound2.fail.cpp  lower_bound3.fail.cpp  upper_bound.pass.cpp  upper_bound0.pass.cpp  upper_bound1.fail.cpp  upper_bound2.fail.cpp  upper_bound3.fail.cpp
test/map/map.special/: member_swap.pass.cpp  non_member_swap.pass.cpp  swap_noexcept.pass.cpp
test/multimap/: allocator_mismatch.fail.cpp  empty.pass.cpp  incomplete_type.pass.cpp  iterator.pass.cpp  max_size.pass.cpp  scary.pass.cpp  size.pass.cpp  types.pass.cpp
test/multimap/multimap.cons/: alloc.pass.cpp  assign_initializer_list.pass.cpp  compare.pass.cpp  compare_alloc.pass.cpp  compare_copy_constructible.fail.cpp  copy.pass.cpp  copy_alloc.pass.cpp  copy_assign.pass.cpp  default.pass.cpp  default_noexcept.pass.cpp  default_recursive.pass.cpp  dtor_noexcept.pass.cpp  initializer_list.pass.cpp  initializer_list_compare.pass.cpp  initializer_list_compare_alloc.pass.cpp  iter_iter.pass.cpp  iter_iter_comp.pass.cpp  iter_iter_comp_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign.pass.cpp  move_assign_noexcept.pass.cpp  move_noexcept.pass.cpp
test/multimap/multimap.modifiers/: clear.pass.cpp  emplace.pass.cpp  emplace_hint.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.pass.cpp  erase_key.pass.cpp  insert_allocator_requirements.pass.cpp  insert_cv.pass.cpp  insert_initializer_list.pass.cpp  insert_iter_cv.pass.cpp  insert_iter_iter.pass.cpp  insert_iter_rv.pass.cpp  insert_rv.pass.cpp
test/multimap/multimap.ops/: count.pass.cpp  count0.pass.cpp  count1.fail.cpp  count2.fail.cpp  count3.fail.cpp  equal_range.pass.cpp  equal_range0.pass.cpp  equal_range1.fail.cpp  equal_range2.fail.cpp  equal_range3.fail.cpp  find.pass.cpp  find0.pass.cpp  find1.fail.cpp  find2.fail.cpp  find3.fail.cpp  lower_bound.pass.cpp  lower_bound0.pass.cpp  lower_bound1.fail.cpp  lower_bound2.fail.cpp  lower_bound3.fail.cpp  upper_bound.pass.cpp  upper_bound0.pass.cpp  upper_bound1.fail.cpp  upper_bound2.fail.cpp  upper_bound3.fail.cpp
test/multimap/multimap.special/: member_swap.pass.cpp  non_member_swap.pass.cpp  swap_noexcept.pass.cpp
test/multiset/: allocator_mismatch.fail.cpp  clear.pass.cpp  count.pass.cpp  emplace.pass.cpp  emplace_hint.pass.cpp  empty.pass.cpp  equal_range.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.pass.cpp  erase_key.pass.cpp  find.pass.cpp  incomplete_type.pass.cpp  insert_allocator_requirements.pass.cpp  insert_cv.pass.cpp  insert_initializer_list.pass.cpp  insert_iter_cv.pass.cpp  insert_iter_iter.pass.cpp  insert_iter_rv.pass.cpp  insert_rv.pass.cpp  iterator.pass.cpp  lower_bound.pass.cpp  max_size.pass.cpp  scary.pass.cpp  size.pass.cpp  types.pass.cpp  upper_bound.pass.cpp
test/multiset/multiset.cons/: alloc.pass.cpp  assign_initializer_list.pass.cpp  compare.pass.cpp  compare_alloc.pass.cpp  compare_copy_constructible.fail.cpp  copy.pass.cpp  copy_alloc.pass.cpp  copy_assign.pass.cpp  default.pass.cpp  default_noexcept.pass.cpp  dtor_noexcept.pass.cpp  initializer_list.pass.cpp  initializer_list_compare.pass.cpp  initializer_list_compare_alloc.pass.cpp  iter_iter.pass.cpp  iter_iter_alloc.pass.cpp  iter_iter_comp.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  (+3 more)
test/set/: allocator_mismatch.fail.cpp  clear.pass.cpp  count.pass.cpp  emplace.pass.cpp  emplace_hint.pass.cpp  empty.pass.cpp  equal_range.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.pass.cpp  erase_key.pass.cpp  find.pass.cpp  incomplete_type.pass.cpp  insert_and_emplace_allocator_requirements.pass.cpp  insert_cv.pass.cpp  insert_initializer_list.pass.cpp  insert_iter_cv.pass.cpp  insert_iter_iter.pass.cpp  insert_iter_rv.pass.cpp  insert_rv.pass.cpp  iterator.pass.cpp  lower_bound.pass.cpp  max_size.pass.cpp  size.pass.cpp  types.pass.cpp  upper_bound.pass.cpp
test/support/: Counter.cpp  Counter.h  DefaultOnly.cpp  DefaultOnly.h  MoveOnly.h  container_test_types.h  count_new.cpp  count_new.hpp  is_transparent.cpp  is_transparent.h  min_allocator.cpp  min_allocator.h  private_constructor.cpp  private_constructor.hpp  test_allocator.cpp  test_allocator.h  test_macros.h
(+34 files in other folders)
